[package]
name = "starlight-neon"
version = "0.1.0"
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "starlight_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
